hotfix for bug where about#social call would collapse margin on top of screen

--- a/_sass/blog/_default.scss
+++ b/_sass/blog/_default.scss
@@ -99,13 +99,13 @@
 }
 
 .bk-blog-nav--frame {
-  padding: 100px 0 0;
+  margin: 100px 0 0;
   width: 100%;
   z-index: 3;
   position: relative;
-  @include media-query($xtra-small){
-    padding: 100px 0 0;
-  };
+  // @include media-query($xtra-small){
+  //   padding: 100px 0 0;
+  // };
 }
 
 .bk-blog-nav {
