--- a/_sass/home/_static.scss
+++ b/_sass/home/_static.scss
@@ -705,7 +705,6 @@ section#contact {
     background: $accent-two;
     height: 12px;
     z-index: 1;
-    transform: translateY(-50%);
     left: 15px;
     @include media-query($xtra-small){
       left: 20px;
